--- a/package.json
+++ b/package.json
@@ -7,33 +7,6 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
-  "dependencies": {
-    "@mdi/js": "^7.0.96",
-    "@vue/composition-api": "^1.7.1",
-    "@vuetify/cli-plugin-utils": "^0.0.10",
-    "apexcharts": "^3.35.5",
-    "core-js": "^3.25.5",
-    "vue": "^3.2.40",
-    "vue-apexcharts": "^1.6.2",
-    "vue-router": "^4.1.5",
-    "vuetify": "^2.6.11",
-    "vuex": "^4.0.2"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-airbnb": "^5.0.2",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "sass": "~1.32.0",
-    "sass-loader": "^10.0.0",
-    "vue-cli-plugin-vuetify": "~2.4.2",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
